<resources>
    <string name="khongCoInternet">Vui lòng kiểm tra kết nối internet để ứng dụng tiếp tục hoạt động</string>
    <string name="empty_list_chat_notify">Bắt đầu trò chuyện\nTin nhắn sẽ được gởi ngay tức thời\nKéo xuống để xem lại lịch sử chat</string>
    <string name="please_check_internet">Vui lòng kiểm tra Internet</string>
    <string name="socket_not_connected">Socket chưa được kết nối</string>
    <string name="saved_messages">Tin lưu trữ</string>
    <string name="not_in_room">Bạn không có quyền truy cập room này.</string>
    <string name="online_mode">Đã kết nối</string>
    <string name="offline_mode">Chưa tìm thấy kết nối để chat</string>
    <string name="notification">Thông báo</string>
    <string name="deny_permission_notify">Bạn vui lòng cấp quyền để ứng dụng có thể hoạt động.\nChọn Quyền (hoặc Permission) để cấp quyền cho ứng dụng</string>
    <string name="ok">OK</string>
    <string name="no">Không</string>
    <string name="gps_not_turn_on">Vui lòng bật GPS để xác định vị trí chính xác hơn.</string>
    <string name="upload_success">Upload thành công</string>
    <string name="lienhe">Liên hệ</string>
    <string name="success">Thành công</string>
    <string name="number_members">%1$d thành viên</string>
    <string name="add_member_success">Thêm thành công</string>
    <string name="record">Ghi âm</string>
    <string name="send">Gửi</string>
    <string name="meeting_is_not_ended">Meeting is not ended</string>
    <string name="finished">Đã kết thúc</string>
    <string name="delete_this_message">Bạn muốn xóa tin nhắn này?</string>
    <string name="delete">Xóa</string>
    <string name="album">Album</string>
    <string name="image">Hình ảnh</string>
    <string name="file">Tập tin</string>
    <string name="video">Video</string>
    <string name="voice">Ghi âm</string>
    <string name="schedule_a_meeting">Đặt lịch</string>
    <string name="seen_by">Đã xem: </string>
    <string name="confirm_download">Bạn muốn tải file này?</string>
    <string name="download">Tải</string>
    <string name="comment">Bình luận</string>
    <string name="yes_x">Đồng ý: %1$s</string>
    <string name="no_x">Từ chối: %1$s</string>
    <string name="maybe_x">Dự kiến: %1$s</string>
    <string name="allow_bubble_chat_feature">Cho phép chat nổi như Messenger</string>
    <string name="remove_channel">Xoá kênh</string>
    <string name="you">Bạn</string>
    <string name="app_need_camera_permission">Vui lòng cho phép truy cập Camera và Microphone để chụp ảnh và quay Video</string>
    <string name="changed_room_avatar_success">Đổi avatar thành công</string>
    <string name="not_found_socket_connection">Không tìm thấy kết nối socket</string>
    <string name="change_channel_name">Đổi tên Kênh</string>
    <string name="change_room_name">Đổi tên nhóm</string>
    <string name="cancel">Cancel</string>
    <string name="input_room_name">Nhập tên</string>
    <string name="rename_room_success">Đổi tên thành công</string>
    <string name="confirm_remove_member_chat">Bạn thật sự muốn mời thành viên này khỏi nhóm?</string>
    <string name="huy">Hủy</string>
    <string name="agree">Đồng ý</string>
    <string name="removed_member_success">Đã mời ra khỏi nhóm</string>
    <string name="confirm_remove_channel">Bạn muốn xoá Kênh này?</string>
    <string name="confirm_left_channel">Bạn muốn rời khỏi Kênh này?</string>
    <string name="confirm_left_group">Bạn muốn rời khỏi Group này?</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="chat_recent">Chat gần đây</string>
    <string name="chat_recent_room">Nhóm chat</string>
    <string name="chat_recent_channel">Kênh chat</string>
    <string name="confirm_update_notify_debug">Chat đã có cập nhật mới!\nĐây là phiên bản DEBUG. Vui lòng gỡ APP và cài lại từ Play Store.</string>
    <string name="new_update">Cập nhật mới</string>
    <string name="close">Đóng</string>
    <string name="uninstall">Gỡ App</string>
    <string name="confirm_update_notify">Đã có phiên bản mới của Chat.\nXin vui lòng cập nhật lên phiên bản\n%1$s</string>
    <string name="update">Cập nhật</string>
    <string name="confirm_remove_contact">Xóa người ngày khỏi danh bạ?</string>
    <string name="confirm_add_contact">Bạn muốn thêm người này vào danh bạ?</string>
    <string name="hide_this_room_chat_ques">Ẩn nhóm chat?</string>
    <string name="remove_from_contacts">Xóa khỏi danh bạ</string>
    <string name="unpin_contact">Bỏ ghim liên hệ này</string>
    <string name="pin_contact">Ghim liên hệ này</string>
    <string name="add_to_contacts">Thêm vào danh bạ</string>
    <string name="download_confirm">Bạn muốn tải file này về máy?</string>
    <string name="app_name" translatable="false">Chat</string>
    <string name="file_downloading_in_app_bar">Vui lòng xem tiến trình tải trên thanh notify.</string>
    <string name="files">Files</string>
    <string name="links">Links</string>
    <string name="send_to_room_x">Gởi vào %1$s?</string>
    <string name="sent_photo">Đã gởi ảnh</string>
    <string name="sent_video">Đã gởi video</string>
    <string name="sent_album">Đã gởi album</string>
    <string name="sent_file">Đã gởi file</string>
    <string name="sent_voice">Gởi một file ghi âm</string>
    <string name="sent_contact">Gởi một liên hệ</string>
    <string name="sent_location">Đã gởi vị trí</string>
    <string name="sent_plan">Đã gởi lịch hẹn</string>
    <string name="sent_zoom_meeting">Đã gởi zoom</string>
    <string name="left_group_confirm">Bạn muốn rời khỏi nhóm chat này?</string>
    <string name="luva_invite_user_by_sms_alert">Người này chưa có tài khoản trên Chat. Bạn có muốn mời người này dùng ứng dụng Chat.</string>
    <string name="luva_invite_user_by_sms_content">Xin chào, hiện tại tôi đang sử dụng Chat. Bạn hãy tải app và đăng ký để chat với tôi nhé, https://myxteam.com</string>
    <string name="phone_of_owner">Đây là số điện thoại của bạn</string>
    <string name="number_phone_incorrect">Số điện thoại không chính xác</string>
    <string name="please_input_phone">Vui lòng nhập số điện thoại</string>
    <string name="copied">Đã copy</string>
    <string name="not_found_sim">Có thể máy bạn chưa lắp SIM</string>
    <string name="phone_empty">Không có SĐT</string>
    <string name="link_copied_to_clipboard">Link đã copy vào clipboard</string>
    <string name="notify_install_mbn_app">Vui lòng cài đặt ứng dụng Mua Bán Nhanh để xem thông tin về sản phẩm</string>
    <string name="install">Cài đặt</string>
    <string name="download_file">Download file</string>
    <string name="_day_">\u0020ngày\u0020</string>
    <string name="_hour_">\u0020giờ\u0020</string>
    <string name="_minute_">\u0020phút\u0020</string>
    <string name="install_google_map">Vui lòng cài Google Map</string>
    <string name="chat_with_admin">Chat với nhóm Admin của Kênh</string>
    <string name="location">Vị trí</string>
    <string name="contact">Liên hệ</string>
    <string name="aa">Aa</string>
    <string name="created_room"><![CDATA[<b>%1$s</b> đã tạo room]]></string>
    <string name="added_member"><![CDATA[<b>%1$s</b> đã thêm <b>%2$s</b> vào nhóm]]></string>
    <string name="removed_member"><![CDATA[<b>%1$s</b> đã mời <b>%2$s</b> khỏi nhóm]]></string>
    <string name="message_deleted">Tin nhắn đã xóa!</string>
    <string name="renamed_room_to"><![CDATA[<b>%1$s</b> đổi tên nhóm thành <b>%2$s</b>]]></string>
    <string name="changed_room_avatar"><![CDATA[<b>%1$s</b> đã đổi avatar nhóm]]></string>
    <string name="created_channel"><![CDATA[<b>%1$s</b> đã tạo channel]]></string>
    <string name="renamed_channel_to"><![CDATA[<b>%1$s</b> đổi tên channel thành <b>%2$s</b>]]></string>
    <string name="leave_room"><![CDATA[<b>%1$s</b> đã rời khỏi nhóm]]></string>
    <string name="plan_x_due_y"><![CDATA[Đặt lịch <b>%1$s</b> đã tới hạn (%2$s)]]></string>
    <string name="meeting_x_ended">Meeting \'%1$s\' đã kết thúc</string>
    <string name="action_pin_message"><![CDATA[<b>%1$s</b> đã Pin tin nhắn "%2$s"]]></string>
    <string name="action_unpin_message"><![CDATA[<b>%1$s</b> đã Unpin tin nhắn "%2$s"]]></string>
    <string name="action_pin_image"><![CDATA[<b>%1$s</b> đã Pin image "%2$s"]]></string>
    <string name="action_unpin_image"><![CDATA[<b>%1$s</b> đã Unpin image "%2$s"]]></string>
    <string name="action_pin_video"><![CDATA[<b>%1$s</b> đã Pin video "%2$s"]]></string>
    <string name="action_unpin_video"><![CDATA[<b>%1$s</b> đã Unpin video "%2$s"]]></string>
    <string name="action_pin_album"><![CDATA[<b>%1$s</b> đã Pin album]]></string>
    <string name="action_unpin_album"><![CDATA[<b>%1$s</b> đã Unpin album]]></string>
    <string name="action_pin_file"><![CDATA[<b>%1$s</b> đã Pin file "%2$s"]]></string>
    <string name="action_unpin_file"><![CDATA[<b>%1$s</b> đã Unpin file "%2$s"]]></string>
    <string name="action_pin_voice"><![CDATA[<b>%1$s</b> đã Pin file ghi âm]]></string>
    <string name="action_unpin_voice"><![CDATA[<b>%1$s</b> đã Unpin file ghi âm]]></string>
    <string name="action_pin_contact"><![CDATA[<b>%1$s</b> đã Pin liên hệ "%2$s"]]></string>
    <string name="action_unpin_contact"><![CDATA[<b>%1$s</b> đã Unpin liên hệ "%2$s"]]></string>
    <string name="action_pin_link"><![CDATA[<b>%1$s</b> đã Pin link "%2$s"]]></string>
    <string name="action_unpin_link"><![CDATA[<b>%1$s</b> đã Unpin link "%2$s"]]></string>
    <string name="action_pin_location"><![CDATA[<b>%1$s</b> đã Pin vị trí]]></string>
    <string name="action_unpin_location"><![CDATA[<b>%1$s</b> đã Unpin vị trí]]></string>
    <string name="channel_name">Tên Kênh</string>
    <string name="channel_description">Mô tả về kênh thông tin của bạn để các thành viên tiện theo dõi</string>
    <string name="date_and_hour"><![CDATA[Ngày & Giờ]]></string>
    <string name="duration">Thời lượng</string>
    <string name="link_with_google_calendar">Nếu bạn muốn đồng bộ lịch hẹn vào Google Calendar thì nhấn Liên kết để cho phép ứng dụng tạo lịch hẹn trên Google Calendar.</string>
    <string name="pin_message">Ghim tin nhắn</string>
    <string name="unpin_message">Bỏ ghim tin nhắn</string>
    <string name="copy">Copy</string>
    <string name="reply">Trả lời</string>
    <string name="forward">Chuyển tiếp</string>
    <string name="description">Mô tả</string>
    <string name="create_appointment">Đặt lịch hẹn</string>
    <string name="title_require">Tiêu đề (bắt buộc)</string>
    <string name="schedule_title_suggest">Cuộc họp này bàn về nội dung gì?</string>
    <string name="place_option">Địa điểm (tùy chọn)</string>
    <string name="tap_to_add_a_place">Nhấn để thêm một địa điểm</string>
    <string name="note_option">Ghi chú (tùy chọn)</string>
    <string name="note">Ghi chú</string>
    <string name="link">Liên kết</string>
    <string name="channel_private">Kênh Private</string>
    <string name="channel_private_description">Chỉ có admin mời vào mới có thể tham gia</string>
    <string name="channel_public">Kênh Public</string>
    <string name="channel_public_description">Mọi người đều có thể tham gia từ link được mời</string>
    <string name="deeplink_hint">Name</string>
    <string name="revoke_link">Revoke link</string>
    <string name="check">Check</string>
    <string name="channel_show_username_of_sender">Hiển thị tên người gởi trong Kênh</string>
    <string name="allow_chat_with_admin">Cho phép chat với Admin kênh</string>
    <string name="notify_setting">Cài đặt thông báo</string>
    <string name="notify_view_list">Hiển thị danh sách thông báo</string>
    <string name="notify_all">Tất cả thông báo</string>
    <string name="notify_viewed">Thông báo đã xem</string>
    <string name="notify_not_viewed">Thông báo chưa xem</string>
    <string name="allow_receive_notify">Cho phép nhận thông báo</string>
</resources>