<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ntfConfigActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="-30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/notify_setting"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textAllCaps="true"
        android:gravity="bottom"
        android:padding="15dp"
        android:textColor="@color/grey_700"
        android:text="@string/notify_view_list"
        android:background="@color/grey_100" />

    <RadioGroup
        android:id="@+id/ntfConfigActivity_viewType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <RadioButton
            android:id="@+id/rd1"
            android:padding="15dp"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_all"/>
        <RadioButton
            android:id="@+id/rd2"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_viewed"/>
        <RadioButton
            android:id="@+id/rd3"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_not_viewed"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/grey_100" />


    <CheckBox
        android:id="@+id/ntfConfigActivity_receiveNtfCheck"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:checked="true"
        android:text="@string/allow_receive_notify"/>



</LinearLayout>
