<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetStartWithNavigation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/create_appointment"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryChat"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <include layout="@layout/separate_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_require"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_title"
                    android:textStyle="bold" />

                <com.workchat.core.widgets.MyEditText
                    android:id="@+id/txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/schedule_title_suggest"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/date_and_hour"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="14-12-2018 15:05"
                    android:textSize="@dimen/schedule_font_size_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/duration"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="30 phút"
                    android:textSize="@dimen/schedule_font_size_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/place_option"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right_grey_500_24dp"
                    android:gravity="center_vertical"
                    android:hint="@string/tap_to_add_a_place"
                    android:text=""
                    android:maxLines="2"
                    android:minLines="2"
                    android:textSize="@dimen/schedule_font_size_title" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/note_option"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_title"
                    android:textStyle="bold" />

                <com.workchat.core.widgets.MyEditText
                    android:id="@+id/txt5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/note"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/schedule_font_size_content" />

                <LinearLayout
                    android:id="@+id/linearLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/link_with_google_calendar"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <Button
                        android:id="@+id/btnLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/link"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/light_blue_500"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="@dimen/margin_10dp"
        android:backgroundTint="@color/colorPrimaryChat"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/schedule_font_size_content"
        android:textColor="@color/white"
        android:text="@string/send"/>

</RelativeLayout>
