<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryChat"
        app:contentInsetStartWithNavigation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="-30dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:visibility="gone"
                        android:layout_marginRight="@dimen/margin_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="@dimen/avatar_size_larger"
                            android:layout_height="@dimen/avatar_size_larger"
                            android:background="@drawable/bg_circle_grey_500" />

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@drawable/ic_camera_alt_white_36dp" />
                    </RelativeLayout>

                    <com.workchat.core.widgets.MyEditText
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/channel_name"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                </LinearLayout>

                <com.workchat.core.widgets.MyEditText
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/channel_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <RadioGroup
                    android:id="@+id/group1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio2"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/channel_private" />

                    <TextView
                        android:id="@+id/radioDes2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/channel_private_description" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/channel_public" />

                    <TextView
                        android:id="@+id/radioDes1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/channel_public_description" />


                </RadioGroup>

                <LinearLayout
                    android:id="@+id/linearCopyLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/link"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:textColor="@color/colorPrimaryChat"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.workchat.core.widgets.MyEditText
                            android:id="@+id/txt3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/deeplink_hint"
                            android:digits="abcdefghijklmnopqrstuvwxyz1234567890-_."
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                        <ImageButton
                            android:id="@+id/btn1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_content_copy_black_24dp" />

                        <Button
                            android:id="@+id/btn3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/revoke_link"
                            android:textColor="@color/colorPrimaryChat" />

                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check"
                            android:textColor="@color/colorPrimaryChat" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtLinkDes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryChat"
                        android:text="" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <CheckBox
                    android:id="@+id/cb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channel_show_username_of_sender" />
            </LinearLayout>

            <include layout="@layout/separate_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <CheckBox
                    android:id="@+id/cb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_chat_with_admin" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
